--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(205, 54, 54);
+}
