--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgb(205, 54, 54);
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  background-color: #888;
+}
