--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,13 @@ main {
   border-radius: 5px;
   background-color: transparent;
 }
+
+#selection-colors {
+  padding: 7px 0px;
+  width: 50%;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: #fff;
+}
